# OrionCLI

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: main.rs
src/agent/: middleware.rs  mod.rs  orchestrator.rs  prompts.rs
src/cli/: command_picker.rs  markdown.rs  mod.rs  repl.rs  theme.rs
src/config/: mod.rs  settings.rs
src/llm/: anthropic.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src/mcp/: mod.rs
src/multi_agent/: mod.rs
src/sandbox/: mod.rs
src/session/: mod.rs
src/skills/: mod.rs
src/tools/: browser.rs  custom.rs  filesystem.rs  git.rs  grep.rs  mod.rs  terminal.rs
