[package]
name = "orion"
version = "0.1.0"
edition = "2021"
authors = ["JL <jl@orion.bot>"]
description = "OrionBot CLI - High-performance agentic coding assistant in Rust"

[dependencies]
# Async Runtime
tokio = { version = "1.38", features = ["full"] }
futures = "0.3.30"
tokio-stream = "0.1.15"
async-trait = "0.1.80"

# Command Line Interface & TUI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28.1"
colored = "2.1.0"
indicatif = "0.17.8"
rustyline = "14.0.0" # interactive line editor

# Formatting, Parsing, and Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
dirs = "5.0.1"

# HTTP & API Client
reqwest = { version = "0.12.5", features = ["json", "stream"] }

# Text Parsing & Code Highlighting
syntect = "5.2.0" # syntax highlighter

# Browser Scraping (Phase 6)
scraper = "0.19.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
